<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/promo_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/create_promo_body"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/promo_company"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/create_promo_comp"
        android:textColorHint="@android:color/white"
        android:background="@drawable/text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promo_body" />

    <EditText
        android:id="@+id/promo_location"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/create_location"
        android:textColorHint="@android:color/white"
        android:background="@drawable/text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promo_company" />

    <EditText
        android:id="@+id/promo_tags"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/create_tags"
        android:textColorHint="@android:color/white"
        android:background="@drawable/text_box"
        app:layout_constraintBottom_toTopOf="@id/create_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promo_location"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/create_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_box"
        android:text="@string/create_continue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.84" />

</android.support.constraint.ConstraintLayout>