<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/create2_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/create_body"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create2_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_diff"
        android:textColor="#AAffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create2_body" />

    <Button
        android:id="@+id/create2_attend"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_steeringwheel"
        android:drawablePadding="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:text="@string/create_attendee"
        android:textColor="#6500be"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create2_promo"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create2_diff"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/create2_promo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_megaphone"
        android:drawablePadding="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:text="@string/create_Promoter"
        android:textColor="#6500be"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create2_diff" />



</android.support.constraint.ConstraintLayout>